# FastFem

./: CMakeLists.txt  README.md
include/FastFem/common/: hash_table.h  sys_utils.h
include/FastFem/dof/: DofHandler.hpp
include/FastFem/fe/: FEBase.hpp  FESimplexP.hpp
include/FastFem/linalg/: FullMatrix.hpp  MatrixTools.hpp  Vector.hpp
include/FastFem/linalg/iterativeSolvers/: CGSolver.hpp  IterativeSolver.hpp
include/FastFem/linalg/sparseMatrices/: COOMatrix.hpp  CSRMatrix.hpp  MatrixTools.hpp  SkylineMatrix.hpp  SparseMatrix.hpp  SymCSRMatrix.hpp
include/FastFem/mesh/: Geometry.hpp  Mesh.hpp  MeshAdjacency.hpp  MeshIO.hpp  MeshMaker.hpp  VertexHasher.hpp
include/FastFem/types/: CommonTypes.hpp
include/common/: array.h  hash.h  hash_table.h  vec3.h
include/fem/: NavierStokesSolver.hpp  poisson.hpp
include/linalg/: skr_sparse_matrix.hpp  sparse_matrix.hpp  system.hpp  vector.hpp
include/mesh/: cube.hpp  mesh.hpp  mesh_tools.hpp
src/dof/: DofHandler.cpp
src/fe/: FESimplexP.cpp  FESimplexP1.cpp  FESimplexP2.cpp  FESimplexP3.cpp
src/fem/: NavierStokesSolver.cpp  poisson.cpp
src/linalg/: MatrixTools.cpp  Vector.cpp  system.cpp  vector.cpp
src/linalg/iterativeSolvers/: CGSolver.cpp  IterativeSolver.cpp
src/linalg/sparseMatrices/: COOMatrix.cpp  CSRMatrix.cpp  MatrixTools.cpp  SkylineMatrix.cpp  SparseMatrix.cpp  SymCSRMatrix.cpp
src/main/: tp1.cpp
src/mesh/: Geometry.cpp  Mesh.cpp  MeshAdjacency.cpp  MeshIO.cpp  MeshMaker.cpp  MeshTools.hpp  cube.cpp  mesh.cpp  mesh_tools.cpp
test/: test_IO.cpp  test_affine.cpp  test_cg.cpp  test_csr.cpp  test_dof.cpp  test_linalg.cpp  test_mesh.cpp  test_meshio.cpp  test_pattern.cpp  test_poisson.cpp
test/results_analysis/: convergence_results.csv  csr_convergence.cpp  plot_convergence.py
test/test_modules/: test_affine.cpp  test_cg.cpp  test_mesh.cpp  test_pattern.cpp
test/test_poisson/: csr.cpp  csr_p2.cpp  skyline.cpp  symcsr.cpp  test_p2.cpp  timed_csr.cpp  timed_skyline.cpp  timed_symcsr.cpp
test/test_poisson/P1/: csr.cpp  poisson_P1_2D_Cholesky.cpp  poisson_P1_2D_csr.cpp  poisson_P1_2D_skyline.cpp  poisson_P1_2D_symcsr.cpp
test/test_poisson/P2/: csr_p2.cpp  poisson_P2_2D.cpp  poisson_p2_2D.cpp
test/test_poisson/P3/: poisson_P3_2D.cpp  test_p3.cpp
